--- a/src/App.css
+++ b/src/App.css
@@ -37,4 +37,9 @@
   }
 }
 
+@font-face {
+  font-family: 'abc';
+  font-weight: 400;
+  src: url('../public/Fonts/lostarr-webfont.woff') format('woff');
+}
 
